--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -8,7 +8,19 @@ before_script:
   - apk update && apk add bash
 
 stages:
+  - lint
   - test
+
+lint:
+  stage: lint
+  image:
+    name: docker/compose:latest
+  script:
+    - docker-compose -f docker-compose.yml build
+    - docker-compose -f docker-compose.yml run server flake8 --version
+    - docker-compose -f docker-compose.yml run server flake8 --config=.flake8 --statistics
+  only:
+    - merge_request
 
 test:
   stage: test
