--- a/nginx/Dockerfile
+++ b/nginx/Dockerfile
@@ -3,7 +3,7 @@ FROM python:3.7-slim AS server
 RUN mkdir /server && apt-get update && apt-get install -y git
 WORKDIR /server
 
-ADD ./server/requirements.txt /server/requirements.txt
+ADD ./server/requirements/prod.txt /server/requirements.txt
 RUN pip install -r requirements.txt
 
 ADD ./server /server
