--- a/server/Dockerfile
+++ b/server/Dockerfile
@@ -3,5 +3,5 @@ FROM python:3.7-slim
 RUN mkdir /server && apt-get update && apt-get install -y git
 WORKDIR /server
 
-ADD ./server/requirements.txt /server/requirements.txt
+ADD ./server/requirements/dev.txt /server/requirements.txt
 RUN pip install -r requirements.txt
