--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -14,7 +14,7 @@ stages:
 lint:
   stage: lint
   image:
-    name: docker/compose:latest
+    name: docker/compose:1.25.5
   script:
     - docker-compose -f docker-compose.yml build
     - docker-compose -f docker-compose.yml run server flake8 --version
@@ -25,7 +25,7 @@ lint:
 test:
   stage: test
   image:
-    name: docker/compose:latest
+    name: docker/compose:1.25.5
   script:
     - echo $CI_COMMIT_REF_SLUG
     - docker-compose build
