--- a/docker-compose.prod.yml
+++ b/docker-compose.prod.yml
@@ -27,7 +27,7 @@ services:
             BROKER_URL: 'amqp://user:password@rabbitmq:5672/my_vhost'
 
     db:
-        image: postgres:11.2
+        image: postgres:11.2-alpine
         volumes:
             - ./pg_data:/var/lib/postgresql/data
         environment:
